WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164370
[Win][Direct2D] Native Windows widgets are drawn upside-down
https://bugs.webkit.org/show_bug.cgi?id=164370
Summary
[Win][Direct2D] Native Windows widgets are drawn upside-down
Brent Fulgham
Reported
2016-11-03 10:31:42 PDT
The concept of up/down in GDI is inverted compared to Direct2D. We need to properly flip the context of any bitmaps generated by dropping into GDI code paths.
Attachments
Patch
(2.06 KB, patch)
2016-11-03 10:34 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch v2
(2.08 KB, patch)
2016-11-03 10:54 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2016-11-03 10:34:39 PDT
Created
attachment 293775
[details]
Patch
WebKit Commit Bot
Comment 2
2016-11-03 10:36:57 PDT
Attachment 293775
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:15: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 3
2016-11-03 10:54:50 PDT
Created
attachment 293780
[details]
Patch v2 Correct tabs in Changelog.
Alex Christensen
Comment 4
2016-11-03 11:37:19 PDT
Comment on
attachment 293780
[details]
Patch v2 lol
WebKit Commit Bot
Comment 5
2016-11-03 12:12:40 PDT
Comment on
attachment 293780
[details]
Patch v2 Clearing flags on attachment: 293780 Committed
r208339
: <
http://trac.webkit.org/changeset/208339
>
WebKit Commit Bot
Comment 6
2016-11-03 12:12:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug