[Win][Direct2D] Native Windows widgets are drawn upside-down https://bugs.webkit.org/show_bug.cgi?id=164370

Reviewed by Alex Christensen.

When we return from drawing in GDI code, we need to flip the resulting
bitmap so that it draws in the proper orientation in Direct2D.

Tested by existing widget tests.

* platform/graphics/win/GraphicsContextDirect2D.cpp:
(WebCore::GraphicsContext::releaseWindowsContext): Flip before drawing
to our Direct2D context.


Canonical link: https://commits.webkit.org/182090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208339 268f45cc-cd09-0410-ab3c-d52691b4dbfc